--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,14 @@
     "name": "magemodule/module-core",
     "description": "MageModule core and common functionality",
     "type": "magento2-module",
-    "version": "2.0.4",
+    "version": "2.0.5",
     "license": [
         "OSL-3.0",
         "AFL-3.0"
     ],
+    "require": {
+        "magento/framework": ">= 100.2.0"
+    },
     "autoload": {
         "files": [
             "registration.php"
