--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,13 @@
     "name": "magemodule/module-core",
     "description": "MageModule core and common functionality",
     "type": "magento2-module",
-    "version": "2.0.9",
+    "version": "2.0.10",
     "license": [
         "OSL-3.0",
         "AFL-3.0"
     ],
     "require": {
-        "magento/framework": "100.2.0 - 102.0.4"
+        "magento/framework": ">= 102.0.5"
     },
     "autoload": {
         "files": [
